primer join
