# storage/api-docs/api-docs.json
@@ -1158,6 +1158,119 @@
                 ]
             }
         },
+        "/horarios": {
+            "get": {
+                "tags": [
+                    "horarios"
+                ],
+                "summary": "Lists available horarios",
+                "description": "Gets all available horarios resources",
+                "operationId": "App\\Http\\Controllers\\HorariosController::index",
+                "parameters": [
+                    {
+                        "name": "paginate",
+                        "in": "query",
+                        "description": "paginate",
+                        "required": false,
+                        "schema": {
+                            "title": "Paginate",
+                            "description": "The unique identifier of a estudiante resource",
+                            "type": "boolean",
+                            "example": "true"
+                        }
+                    },
+                    {
+                        "name": "dataSearch",
+                        "in": "query",
+                        "description": "estudiante resource name",
+                        "required": false,
+                        "schema": {
+                            "description": "The unique identifier of a estudiante resource",
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "sortField",
+                        "in": "query",
+                        "description": "Sort field",
+                        "required": false,
+                        "schema": {
+                            "title": "name",
+                            "description": "The unique identifier of a estudiante resource",
+                            "type": "string",
+                            "example": "name"
+                        }
+                    },
+                    {
+                        "name": "sortOrder",
+                        "in": "query",
+                        "description": "Sort order field",
+                        "schema": {
+                            "title": "sortOrder",
+                            "description": "The unique identifier of a estudiante resource",
+                            "type": "string",
+                            "example": "asc"
+                        }
+                    },
+                    {
+                        "name": "perPage",
+                        "in": "query",
+                        "description": "Sort order field",
+                        "schema": {
+                            "title": "perPage",
+                            "description": "The unique identifier of a horarios resource",
+                            "type": "number",
+                            "default": "0"
+                        }
+                    },
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "description": "authorization",
+                        "schema": {
+                            "title": "authorization",
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "A list with horarios",
+                        "headers": {
+                            "X-Auth-Token": {
+                                "description": "calls per hour allowed by the estudiante",
+                                "schema": {
+                                    "type": "integer",
+                                    "format": "int32"
+                                }
+                            }
+                        },
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated.",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "default": {
+                        "description": "an \"unexpected\" error",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "passport": [
+                            "*"
+                        ]
+                    }
+                ]
+            }
+        },
         "/institucion": {
             "get": {
                 "tags": [
@@ -4956,6 +5069,13 @@
                         "type": "string"
                     },
                     "id_nota": {
+                        "description": "The recuperatorios id_nota",
+                        "required": [
+                            "true"
+                        ],
+                        "type": "string"
+                    },
+                    "nota_r": {
                         "description": "The recuperatorios id_nota",
                         "required": [
                             "true"
